--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: "Murali"
 email: p.murali730@gmail.com
-description: "Murali Personal Site"
+description: "Murali Personal blog"
 baseurl: ""
 url: "http://murali883.github.io"
 title_description: "A newly-minted web developer specializing in Ruby on Rails. Also experienced in HTML5, CSS3, JQuery, JavaScript, and more. A former chemical engineer. A life-long learner who enjoys picking up new technology skills and building on familiar ones. Yury lives in Brooklyn, NY with his wife and two daughters."
