--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@ baseurl: ""
 url: "http://murali883.github.io"
 title_description: "A newly-minted web developer specializing in Ruby on Rails. Also experienced in HTML5, CSS3, JQuery, JavaScript, and more. A former chemical engineer. A life-long learner who enjoys picking up new technology skills and building on familiar ones. Yury lives in Brooklyn, NY with his wife and two daughters."
 title_image: "http://i.imgur.com/VSI9h3S.jpg"
-google_analytics: "UA-67857103-1"
-disqus_account: yvoloshin
-github_repository: https://yvoloshin.github.io
+google_analytics: ""
+disqus_account: Murali
+github_repository: https://murali883.github.io
 addthis_id: 
-post_limit: 5
+post_limit: 10
 
 # Social usernames/URLs
-twitter_username: YuryVoloshin
-github_username:  yvoloshin
-linkedin_link: http://www.linkedin.com/in/yvoloshin
+twitter_username: murali8831
+github_username:  murali883
+linkedin_link: http://linkedin.com/in/murali-p-876ab1132
 google_plus_link: 
 stackoverflow_link:
 
