--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ google_plus_link:
 stackoverflow_link:
 
 # Footer
-footer_left: "Template made with <i class=\"fa fa-heart\"></i> by <a href=\"https://twitter.com/_JacobTomlinson\">Jacob Tomlinson</a>"
-footer_right: "&lt;/&gt; on <a href=\"https://github.com/jacobtomlinson/carte-noire\">Github</a> &nbsp;<i class=\"fa fa-github-alt\"></i>"
+footer_left: "Template made with <i class=\"fa fa-heart\"></i> by <a href=\"https://twitter.com/murali8831\">Murali</a>"
+footer_right: "&lt;/&gt; on <a href=\"https://github.com/murali883\">Github</a> &nbsp;<i class=\"fa fa-github-alt\"></i>"
 
 # Build settings
 markdown: redcarpet
