--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: "Murali.P"
 email: p.murali730@gmail.com
-description: "Murali Personal blog"
+description: "Its my personal blog where i'll post artciles realted to Dev-Ops technologies on every week"
 baseurl: ""
 url: "http://murali883.github.io"
-title_description: "A newly-minted web developer specializing in Ruby on Rails. Also experienced in HTML5, CSS3, JQuery, JavaScript, and more. A former chemical engineer. A life-long learner who enjoys picking up new technology skills and building on familiar ones. Yury lives in Brooklyn, NY with his wife and two daughters."
+title_description: "Skilled DevOps Engineer with 3+ years of hands-on experience supporting, automating, and optimizing mission critical deployments in AWS, leveraging configuration management, CI/CD, and DevOps processes."
 title_image: "https://github.com/murali883/murali883.github.io/blob/master/assets/photo.png"
 google_analytics: ""
 disqus_account: Murali
