--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Its my personal blog where i'll post artciles realted to Dev-Ops t
 baseurl: ""
 url: "http://murali883.github.io"
 title_description: "Skilled DevOps Engineer with 2+ years of hands-on experience supporting, automating, and optimizing mission critical deployments in AWS, leveraging configuration management, CI/CD, and DevOps processes."
-title_image: "https://github.com/murali883/murali883.github.io/blob/master/assets/photo.png"
+title_image: "https://pbs.twimg.com/profile_images/977917463970156544/4nd41WER_400x400.jpg"
 google_analytics: ""
 disqus_account: Murali
 github_repository: https://murali883.github.io
